# tools.proto

./: Cargo.toml  LICENSE.txt  README.MD  messages.rs  messages_from_slice.rs  messages_write.rs  rustfmt.toml  structures.rs  test.json5
.github/workflows/: development.yml
Swift/BP3DProto/: BP3DProto.h  message.swift  string.swift  util.swift
Swift/BP3DProto/codec/: array.swift  bit.swift  byte.swift
Swift/BP3DProto/message/: array1.swift  common.swift  list.swift  message.swift  string.swift
Swift/BP3DProto/util/: buffer.swift  bytesutil.swift  ptrbuffer.swift  size.swift  transmute.swift
Swift/BP3DProtoTests/: BP3DProtoTests.swift
Swift/bp3d-protoc.xcodeproj/: project.pbxproj
Swift/bp3d-protoc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Swift/testprog/: generate_proto.sh  main.swift  testprog.h
Swift/testprog/arrays/: arrays.messages.swift  arrays.messages_from_bytes.swift  arrays.messages_from_slice.swift  arrays.messages_write.swift  arrays.structures.swift
Swift/testprog/bits/: bits.structures.swift  structures.swift
Swift/testprog/bits2/: bits2.structures.swift
Swift/testprog/enums/: enums.enums.swift  enums.structures.swift
Swift/testprog/lists/: lists.messages.swift  lists.messages_from_bytes.swift  lists.messages_from_slice.swift  lists.messages_write.swift  lists.structures.swift
Swift/testprog/lists2/: lists2.messages.swift  lists2.messages_from_bytes.swift  lists2.messages_from_slice.swift  lists2.messages_write.swift  lists2.structures.swift
Swift/testprog/struct_arrays/: struct_arrays.structures.swift
Swift/testprog/structs/: structs.structures.swift
Swift/testprog/test/: test.messages.swift  test.messages_from_bytes.swift  (+3 more)
Swift/testprogTests/: ArraysTests.swift  BitsTests.swift  EnumsTests.swift  Lists2Tests.swift  ListsTests.swift  StructArraysTests.swift  StructsTests.swift  TestTests.swift  UnionsTests.swift  ViewsTests.swift
auto-cli/: Cargo.toml
auto-cli/src/: main.rs
cli/: Cargo.toml
cli/src/: args.rs  builder.rs  main.rs
compiler/: Cargo.toml
compiler/src/: build_script.rs  error.rs  interface.rs  lib.rs  main.rs  util.rs
compiler/src/api/: build_script.rs  error.rs  generator.rs  loader.rs  mod.rs
compiler/src/api/config/: core.rs  mod.rs  model.rs
compiler/src/api/core/: generator.rs  loader.rs  mod.rs
compiler/src/api/tools/: error.rs  mod.rs  rust.rs  swift.rs
compiler/src/compiler/: enum.rs  error.rs  imports.rs  message.rs  mod.rs  protocol.rs  structure.rs  union.rs  util.rs
compiler/src/compiler/util/: imports.rs  mod.rs  store.rs  types.rs
compiler/src/model/: message.rs  mod.rs  protocol.rs  structure.rs  typedef.rs  union.rs
compiler/tests/: test_struct_alignment.rs  test_struct_errors.rs  test_struct_undefined.rs  test_struct_views.rs  test_struct_zst.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  message.rs  union.rs
runtime/src/codec/: arrays.rs  bits.rs  bytes.rs  mod.rs
runtime/src/message/: interface.rs  macros.rs  mod.rs
runtime/src/message/payload/: common.rs  list.rs  list_base.rs  mod.rs
runtime/src/message/util/: array.rs  common.rs  list.rs  list_base.rs  mod.rs  size.rs  string.rs
runtime/src/util/: codec.rs  common.rs  list.rs  mod.rs  scalar.rs  string.rs
src/: main.rs
src/compiler/: message.rs  mod.rs  protocol.rs
src/model/: message.rs  protocol.rs  structure.rs
testprog/: Cargo.toml  build.rs  protoc.toml
testprog/src/: arrays.json5  bits.json5  bits2.json5  enums.json5  import_ambiguous.json5  lib.rs  lists.json5  lists2.json5  main.rs  struct_arrays.json5  structs.json5  test.json5  unions.json5  unions2.json5  values.json5  views.json5
testprog/tests/: test_ambiguous.rs  test_arrays.rs  test_bits.rs  test_enums.rs  test_lists.rs  test_lists2.rs  test_struct_arrays.rs  test_structs.rs  test_test.rs  test_unions.rs  test_views.rs
(+17 files in other folders)
