[package]
name = "bp3d-protoc"
version = "1.0.0-rc.3.0.0"
edition = "2021"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
description = "BP3D protocol compiler/generator."
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/tools.proto"
readme = "../README.MD"
keywords = ["bp3d", "protoc"]
categories = ["network-programming", "development-tools::build-utils", "parsing"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
json5 = "0.4.1"
toml = { version = "0.5.11", optional = true }
bp3d-util = { path = "../../tools.util", version = "1.3.0", features = ["simple-error", "path", "index-map"] }
itertools = "0.13.0"
regex = "1.10.5"
bp3d-debug = "1.0.0-rc.5.0.0"

[features]
model = []
compiler = ["model"]
gen = ["compiler"]
gen-rust = ["gen"]
gen-swift = ["gen"]
api = ["gen"]
api-config = ["api", "toml"]
api-tools = ["api-config"]
api-rust = ["gen-rust", "api-tools"]

legacy = ["gen"]
