[package]
name = "bp3d-proto"
version = "1.0.0-rc.2.0.0"
edition = "2021"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
description = "BP3D protocol runtime."
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/tools.proto"
readme = "../README.MD"
keywords = ["bp3d", "proto"]
categories = ["network-programming", "parsing"]

[dependencies]
bp3d-util = { version = "1.0.0", features = ["simple-error"] }
bytesutil = "0.7.0"
tokio = { version = "1.39.3", features = ["full"], optional = true }
